# LLM-auto-tarefa

./: AGENTS.md  CHANGELOG.md  LICENSE  MCP_zh.md  index.html  toolchain-mingw-arm64.cmake  toolchain-mingw-x64.cmake  windows-node-install.en.md  windows-node-install.md
WinBridgeAgent/: CMakeLists.txt  MCP.md  README.md  README_zh.md  server.json  toolchain-mingw-x86.cmake
WinBridgeAgent/include/: app_globals.h  http_routes.h  http_server.h  mcp_streamable.h  tray_app.h
WinBridgeAgent/include/services/: app_service.h  command_service.h  file_operation_service.h  file_service.h  power_service.h  process_service.h
WinBridgeAgent/include/support/: audit_logger.h  config_manager.h  download_progress_window.h  settings_window_ids.h  update_checker.h
WinBridgeAgent/resources/: translations.json  version_info.rc.in
WinBridgeAgent/scripts/: build.sh  deploy.sh  format.sh  release.sh  run_all_v030_tests.sh  test_clipboard.sh  test_file_ops.sh  test_mcp.sh  test_power_management.sh  test_process_management.sh  test_security.sh  test_windows_processes.sh
WinBridgeAgent/scripts/qwen3_tts_webapi/: server.py
WinBridgeAgent/src/: main.cpp  mcp_streamable.cpp
WinBridgeAgent/src/services/: app_service.cpp  browser_service.cpp  file_service.cpp  process_service.cpp
WinBridgeAgent/src/support/: auto_startup_manager.cpp  config_manager.cpp  download_progress_window.cpp  license_manager.cpp  rate_limiter.cpp  settings_window.cpp  update_checker.cpp
WinBridgeAgent/src/utils/: encoding_utils.cpp
WinBridgeAgent/test-client/: index.html  package.json  vite.config.cjs
WinBridgeAgent/test-client/src/: main.js
WinBridgeAgent/tests/: CMakeLists.txt
WinBridgeAgent/tests/unit/: test_audit_logger.cpp  test_command_service.cpp  test_config_manager.cpp  test_file_service.cpp  test_license_manager.cpp  test_power_service.cpp
WinBridgeAgent/updater/: updater.rc
include/: mcp_handlers.h  mcp_sse.h
include/mcp/: tool_registry.h
include/policy/: policy_guard.h
include/services/: browser_service.h  clipboard_service.h  screenshot_service.h  window_service.h
include/support/: auto_startup_manager.h  dashboard_window.h  download_manager.h  license_manager.h  localization_manager.h  rate_limiter.h  settings_window.h
include/utils/: encoding_utils.h  log_path.h
resources/: README.md  app_icon.rc  config.template.json  settings_window.rc
scripts/: README.md  auto-release.sh  init-repos.sh  install.sh  test_all_features.sh  test_auth.sh  test_dashboard.sh  test_file_operations.sh  test_screenshot.sh
scripts/qwen3_tts_webapi/: requirements.txt
src/: daemon_main.cpp  http_routes.cpp  http_server.cpp  mcp_handlers.cpp  mcp_sse.cpp  tray_app.cpp
src/mcp/: tool_registry.cpp
src/policy/: policy_guard.cpp
src/services/: clipboard_service.cpp  command_service.cpp  file_operation_service.cpp  power_service.cpp  screenshot_service.cpp  window_service.cpp
src/support/: audit_logger.cpp  dashboard_window.cpp  download_manager.cpp  localization_manager.cpp
src/utils/: log_path.cpp
test-client/: vite.config.js.timestamp-1770112584869-1701a2ef6ceec.mjs
tests/unit/: test_policy_guard.cpp  test_tool_registry.cpp
updater/: CMakeLists.txt  updater.cpp
